--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 						<h1><a href="index.html">Future Imperfect</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Projects</a></li>
+								<li><a href="#">Contact</a></li>
 								<li><a href="#">Adipiscing</a></li>
 							</ul>
 						</nav>
