--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" width= "" alt="" /></a>
+								<a href="#" class="logo"><img src="images/logo.jpg" width= "2" alt="2" /></a>
 								<header>
 									<h2>Valeria Roberts</h2>
 									<p>Applied Mathematics, Data Science and Actuarial Science</a></p>
@@ -480,8 +480,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- Footer -->
 							<section id="footer">
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-github"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-handshake-o"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="#" <i class='fa fa-handshake-o'></i><span class="label">Linkedln</span></a></li>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
