--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="footer">
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									<li><a href="#" <i class='fa fa-handshake-o'></i><span class="label">Linkedln</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
