--- a/index.html
+++ b/index.html
@@ -480,11 +480,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- Footer -->
 							<section id="footer">
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
-									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/ValeriaRoberts" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="www.linkedin.com/in/valeria-roberts" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
+									<li><a href="valeriarobertstrujillo@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
 							</section>		
 
 						<!-- Mini Posts -->
