--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="footer">
 								<ul class="icons">
 									<li><a href="https://github.com/ValeriaRoberts" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									<li><a href="www.linkedin.com/in/valeria-roberts" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
+									<li><a href="https://www.linkedin.com/in/valeria-roberts/" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
 									<li><a href="valeriarobertstrujillo@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>		
