--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" width= "2" alt="2" /></a>
+								<a href="#" class="logo"><img src="images/logo.jpg" width= "10" alt="10" /></a>
 								<header>
 									<h2>Valeria Roberts</h2>
 									<p>Applied Mathematics, Data Science and Actuarial Science</a></p>
@@ -482,7 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<ul class="icons">
 									<li><a href="https://github.com/ValeriaRoberts" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									<li><a href="https://www.linkedin.com/in/valeria-roberts/" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
-									<li><a href="valeriarobertstrujillo@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="mailto:valeriarobertstrujillo@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>		
 
