--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" width:"200" alt="" /></a>
+								<a href="#" class="logo"><img src="images/logo.jpg" width:"200" height:"300"/></a>
 								<header>
 									<h2>Valeria Roberts</h2>
 									<p>Applied Mathematics, Data Science and Actuarial Science</a></p>
