--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Home</a></li>
-								<li><a href="#">About</a></li>
+								<li><a href="https://valeriaroberts.github.io/About">About</a></li>
 								<li><a href="#">Projects</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
