--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="/about"> class="nav link"> <i class="far fa-id-card" About</a></li>
+								<li><a href="#">About</a></li>
 								<li><a href="#">Projects</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
