--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">About</a></li>
+								<li><a href="#" class="icon brands fa-twitter">About</a></li>
 								<li><a href="#">Projects</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
