--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter">About</a></li>
-								<li><a href="#">Projects</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="#" class="icon brands fa-address-card">About</a></li>
+								<li><a href="#" class="icon brands fa-file">Projects</a></li>
+								<li><a href="#" class="icon brands fa-envelope">Contact</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
