--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#" class="icon brands fa-address-card">About</a></li>
+								<li><a href="https://valeriaroberts.github.io/about" class="icon brands fa-address-card">About</a></li>
 								<li><a href="#" class="icon brands fa-file">Projects</a></li>
 								<li><a href="#" class="icon brands fa-envelope">Contact</a></li>
 							</ul>
