Update index menu bar

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="https://valeriaroberts.github.io/single.html" class="icon brands fa-address-card">About</a></li>
-								<li><a href="#" class="icon brands fa-file">Projects</a></li>
-								<li><a href="#" class="icon brands fa-envelope">Contact</a></li>
+								<li><a href="https://valeriaroberts.github.io/single.html" class="icon solid fa-address-card">About</a></li>
+								<li><a href="https://valeriaroberts.github.io/projects.html" class="icon solid fa-file">Projects</a></li>
+								<li><a href="https://valeriaroberts.github.io/contact.html" class="icon solid fa-envelope">Contact</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -480,7 +480,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<li><a href="https://www.linkedin.com/in/valeria-roberts/" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
 									<li><a href="mailto:valeriarobertstrujillo@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
-							</section>		
+							</section>
 
 						<!-- Mini Posts -->
 							<section>
