--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="https://valeriaroberts.github.io/single.html" class="icon brands fa-address-card">About</a></li>
+								<li><a href="https://valeriaroberts.github.io/about.html" class="icon brands fa-address-card">About</a></li>
 								<li><a href="#" class="icon brands fa-file">Projects</a></li>
 								<li><a href="#" class="icon brands fa-envelope">Contact</a></li>
 							</ul>
@@ -40,34 +40,9 @@
 
 				<!-- Main -->
 					<div id="main">
-						<head>
-						<title>Valeria Roberts</title>
-						<head>
-						+++
-						title = "About"
-						description = "Hugo, the world’s fastest framework for building websites"
-						author = "Hugo Authors"
-						date = "2019-02-28"
-						layout = "about"
-						+++
 
-						Written in Go, Hugo is an open source static site generator available under the [Apache Licence 2.0.](https://github.com/gohugoio/hugo/blob/master/LICENSE) Hugo supports TOML, YAML and JSON data file types, Markdown and HTML content files and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification and support for Sass SCSS workflows.
-
-						Hugo makes use of a variety of open source projects including:
-
-						* https://github.com/yuin/goldmark
-						* https://github.com/alecthomas/chroma
-						* https://github.com/muesli/smartcrop
-						* https://github.com/spf13/cobra
-						* https://github.com/spf13/viper
-
-						Hugo is ideal for blogs, corporate websites, creative portfolios, online magazines, single page applications or even a website with thousands of pages.
-
-						Hugo is for people who want to hand code their own website without worrying about setting up complicated runtimes, dependencies and databases.
-
-						Websites built with Hugo are extremelly fast, secure and can be deployed anywhere including, AWS, GitHub Pages, Heroku, Netlify and any other hosting provider.
-
-						Learn more and contribute on [GitHub](https://github.com/gohugoio).
+						<h1>PDF Example</h1>
+						<p>Open a PDF file <a href="/documents/CV.pdf">example</a>.</p>
 
 
 						<!-- Post -->
