--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Valeria Roberts</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="https://valeriaroberts.github.io/single.html" class="icon solid fa-address-card">About</a></li>
+								<li><a href="https://valeriaroberts.github.io/about.html" class="icon solid fa-address-card">About</a></li>
 								<li><a href="https://valeriaroberts.github.io/projects.html" class="icon solid fa-file">Projects</a></li>
 								<li><a href="https://valeriaroberts.github.io/contact.html" class="icon solid fa-envelope">Contact</a></li>
 							</ul>
