--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<h1>PDF Example</h1>
-						<p>Open a PDF file <a href="/documents/CV.pdf">example</a>.</p>
+						<h1>Curriculum Vitae</h1>
+						<iframe src="/documents/CV.pdf" width="100%" height="500px"></iframe>
 
 
 						<!-- Post -->
