--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 					<div id="main">
 
 						<h1>Curriculum Vitae</h1>
-						<iframe src="/documents/CV.pdf" scrolling="no" style=" width: 550px; height: 500px;  overflow: hidden;"></iframe>
+						<iframe frameborder="0" scrolling="no" style="height:380px;width:6000px;border:none;" src='/documents/CV.pdf'></iframe>
 
 
 						<!-- Post -->
