--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 					<div id="main">
 
 						<h1>Curriculum Vitae</h1>
-						<iframe src='/documents/CV.pdf'></iframe>
+						<iframe src='/documents/CV.pdf' width="800px" height="2100px"></iframe>
 
 
 						<!-- Post -->
